--- a/BACKEND/Backend/.env
+++ b/BACKEND/Backend/.env
@@ -3,8 +3,14 @@
 
  DB_USER = root
 
- DB_PASSWORD = Aji@1020
+#  DB_PASSWORD = Aji@1020
 
  DB_DATABASENAME=task
 
  PORT = 8000
+
+
+ PORT_NAME = 3307
+
+
+ 
