--- a/BACKEND/Backend/.env
+++ b/BACKEND/Backend/.env
@@ -1,16 +1,27 @@
 
- DB_HOST = localhost
+#  DB_HOST = localhost
 
- DB_USER = root
+#  DB_USER = root
 
-#  DB_PASSWORD = Aji@1020
+# #  DB_PASSWORD = Aji@1020
 
- DB_DATABASENAME=task
+#  DB_DATABASENAME=task
 
- PORT = 8000
+#  PORT = 8000
 
 
- PORT_NAME = 3307
+#  PORT_NAME = 3307
+
+# DatabaseConnection
+DB_HOST=162.214.81.14
+
+DB_User=dzupsnmy_taaf_user
+
+DB_PASSWORD=taafapplicationusers
+
+DB_DATABASENAME=dzupsnmy_Insurance_task
+
+PORT_NAME = 3306
 
 
  
