--- a/BACKEND/Backend/.env
+++ b/BACKEND/Backend/.env
@@ -13,6 +13,7 @@
 #  PORT_NAME = 3307
 
 # DatabaseConnection
+
 DB_HOST=162.214.81.14
 
 DB_User=dzupsnmy_taaf_user
@@ -24,4 +25,4 @@ DB_DATABASENAME=dzupsnmy_Insurance_task
 PORT_NAME = 3306
 
 
- 
+ PORT = 7009
