--- a/Insurance-app-main/package.json
+++ b/Insurance-app-main/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-app": "file:",
     "react-bootstrap": "^2.10.9",
