--- a/BACKEND/Backend/package.json
+++ b/BACKEND/Backend/package.json
@@ -11,7 +11,8 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "y": "file:"
   },
   "name": "y",
   "version": "1.0.0",
