--- a/Insurance-app-main/package.json
+++ b/Insurance-app-main/package.json
@@ -14,6 +14,7 @@
     "autotable": "^1.0.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.487.0",
