--- a/Insurance-app-main/package.json
+++ b/Insurance-app-main/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-app": "file:",
     "react-bootstrap": "^2.10.9",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
