--- a/Insurance-app-main/package.json
+++ b/Insurance-app-main/package.json
@@ -6,7 +6,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
+    "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.0.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -14,6 +15,7 @@
     "autotable": "^1.0.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
