--- a/BACKEND/Backend/.env
+++ b/BACKEND/Backend/.env
@@ -3,13 +3,13 @@
 DatabaseConnection
 
 
-DB_HOST=162.214.81.14
+DB_HOST=122.165.195.54
 
-DB_USER=dzupsnmy_taaf_user
+DB_USER=root
 
-DB_PASSWORD=taafapplicationusers
+DB_PASSWORD=nastaf@321!
 
-DB_DATABASENAME=dzupsnmy_Insurance_task
+DB_DATABASENAME=attendance_db
 
 PORT_NAME = 3306
 
