--- a/BACKEND/Backend/package.json
+++ b/BACKEND/Backend/package.json
@@ -3,6 +3,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "cron": "^4.3.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
@@ -15,8 +16,7 @@
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "validator": "^13.15.0",
-    "xlsx-style": "^0.8.13",
-    "y": "file:"
+    "xlsx-style": "^0.8.13"
   },
   "name": "y",
   "version": "1.0.0",
