--- a/Insurance-app-main/package.json
+++ b/Insurance-app-main/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.2",
-    "@mui/x-date-pickers": "^8.0.0",
+    "@mui/x-date-pickers": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -31,6 +31,7 @@
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
