--- a/Insurance-app-main/package.json
+++ b/Insurance-app-main/package.json
@@ -13,17 +13,20 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^4.7.0",
     "autotable": "^1.0.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.9.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-app": "file:",
     "react-bootstrap": "^2.10.9",
     "react-calendar": "^5.1.0",
