--- a/BACKEND/Backend/package.json
+++ b/BACKEND/Backend/package.json
@@ -16,7 +16,8 @@
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "validator": "^13.15.0",
-    "xlsx-style": "^0.8.13"
+    "xlsx-style": "^0.8.13",
+    "y": "file:"
   },
   "name": "y",
   "version": "1.0.0",
