--- a/BACKEND/Backend/.env
+++ b/BACKEND/Backend/.env
@@ -3,17 +3,12 @@
 DatabaseConnection
 
 
-DB_HOST=122.165.195.54
-
+DB_HOST=192.168.1.123
+# DB_HOST=localhost
 DB_USER=root
-
-DB_PASSWORD=nastaf@321!
-
+DB_PASSWORD=Nas!@$Taf123
 DB_DATABASENAME=attendance_db
-
 PORT_NAME = 3306
-
-
  PORT = 7009
 
  SECRET_KEY=its_wonderful_day
